--- a/index.html
+++ b/index.html
@@ -8,9 +8,20 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Novo Usuario</title>
 </head>
 <body>
-   
+   <div class="container">
+   <section class="header">
+    <h2>Nova Conta</h2>
+   </section>
+ <form id="form" class="form">
+  <div class="form-content">
+       <label for="username">Nome de Usuário</label>
+       <input type="text" name="" id="username" placeholder="Digite o nome do usuário...">
+       <a>Aqui vai a mensagem de erro</a>
+  </div>
+ </form>
+   </div>
 </body>
 </html>
