--- a/index.html
+++ b/index.html
@@ -21,7 +21,31 @@
        <input type="text" name="" id="username" placeholder="Digite o nome do usuário...">
        <a>Aqui vai a mensagem de erro</a>
   </div>
+
+  
+   <div class="form-content">
+        <label for="email">E-mail</label>
+        <input type="email" name="" id="email" placeholder="Digite o seu E-mail...">
+        <a>Aqui vai a mensagem de erro</a>
+        </div>
+
+        
+   <div class="form-content">
+    <label for="password">Senha</label>
+    <input type="password" name="" id="password" placeholder="Digite sua Senha...">
+    <a>Aqui vai a mensagem de erro</a>
+    </div>
+
+    
+   <div class="form-content ">
+    <label for="password-confirmation">Confrimação de Senha</label>
+    <input type="password" name="" id="password-confirmation" placeholder="Digite sua senha novamente...">
+    <a>Aqui vai a mensagem de erro</a>
+    </div>
+
+    <button type="submit">Cadastrar</button>
  </form>
    </div>
+   <script src="script.js"></script>
 </body>
 </html>
